# hackathon

./: README.md  best_lstm.pt  costestimatesummary.csv  engine_ranking.csv  feature_importance.pkl  feature_list.pkl  lstm_final.pt  pyproject.toml  rul_lstm_pytorch.ipynb  scaler_final.pkl
api/: Dockerfile  pyproject.toml
api/api/: main.py
