[project]
name = "hackathon"
version = "0.1.0"
description = ""
authors = [
    {name = "Greta Zehnder",email = "greta.zehnder@studenti.unimi.it"}
]
requires-python = ">=3.11,<3.15"
dependencies = [
    "psycopg2-binary (>=2.9.12,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
