[tool.poetry]
name = "engine-api"
version = "0.1.0"
description = "Engine RUL Prediction API"
authors = ["Francesco Cavaliere"]

[tool.poetry.dependencies]
python = "3.11.*"
fastapi = "^0.115"
uvicorn = "^0.34"
scikit-learn = "^1.5"
joblib = "^1.4"
numpy = "^1.26"
requests = "^2.32"
torch = {version = "^2.2", source = "pytorch-cpu"}

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
